Finished react routing between pages! Finally squashed a bug where packages we not being downloaded properly

--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -39,6 +39,8 @@
     border: none;
     background: none;
 
+    text-decoration: none;
+
     left: 50%;
 }
 
